actions implemented pt1